token implementation to fetch users market

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="path/to/style.css"></link>
+    <script src="path/to/index.var.js"></script>
     <title>Päivi Päivittäjä</title>
   </head>
   <body>
